--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,30 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.0.Final</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.github.houbb/redis-client-jedis -->
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>redis-client-jedis</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
